--- a/Movies_Graph_RAG_Demo/demo_graphrag_english_movies.ipynb
+++ b/Movies_Graph_RAG_Demo/demo_graphrag_english_movies.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Collection from TMDB API (Tamil Movies)\n"
+    "## 1. Data Collection from TMDB API (English Movies)\n"
    ]
   },
   {
